<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2021 Sergio Belda
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">Material Motion Samples</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="playlists">Playlists</string>
    <string name="messages">Messages</string>
    <string name="solar_system">Solar System</string>
    <string name="add_note">Add note</string>
    <string name="save_note">Save note</string>
    <string name="body">Body</string>
    <string name="title">Title</string>
    <string name="my_notes">My notes</string>
    <string name="notes">Notes</string>
    <string name="walkthrough">Walkthrough</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="upload_your_photos">Upload your photos</string>
    <string name="share">Share</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="upload_artistic_photos">Upload your artistic photos to the app</string>
    <string name="share_work_social_networks">Share your work on social networks</string>
    <string name="enjoy_rewards">You and your friends will enjoy fantastic rewards!</string>
    <string name="sign_in">Sign In</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="my_library">My Library</string>
    <string name="return_to">Return</string>
    <string name="music">Music</string>
    <string name="messages_card_body">Use Material Fade transition to show the Floating Action Button and Material Container Transform to transform the FAB into a menu</string>
    <string name="notes_card_body">Use Material Container Transform to transform a FAB into an Activity and a Material Card View into an Activity</string>
    <string name="walkthrough_card_body">Use Material Shared Axis X transition to introduce the main features of an Application</string>
    <string name="solar_system_card_body">Use Material Shared Axis Y transition in a Material Stepper</string>
    <string name="music_card_body">Use Material Fade Through to switch between views that do not have a strong relationship to each other and Material Container Transform with Android Navigation Component</string>
    <string name="sign_in_card_body">Use Material Shared Axis Z to represent App\'s hierarchy. For example, a transition between the application when the user logs in or not</string>
    <string name="hi_there">Hi there!</string>
    <string name="compose_new">Compose New</string>
</resources>
